Added buttons and conditionals

--- a/index.html
+++ b/index.html
@@ -76,8 +76,13 @@
 
     </div>
 
-    <h2 id="result">Your result is...</h2>
+    <!--<h2 id="result">Your result is...</h2>-->
 
+    <div>
+      <!--<button id="displayResult">What kind of person am I?</button>-->
+      <h2 id="result">You are a...</h2>
+    </div>
+    <button id="restart">What kind of person am I?</button>
 
   </main>
 </body>
