--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
 
       <div class="answer-choice">
-        <img src="assets/kuromi.jpg" alt="A picture of the sanrio character Kuromi">
+        <img src="assets/kuromi.jpg" alt="A picture of the Sanrio character Kuromi">
         <br>
         <button id="q1a2">Kuromi</button>
       </div>
@@ -46,13 +46,13 @@
     <div class="question">
 
       <div class="answer-choice">
-        <img src="assets/sunrise.jpg" alt="clipart of a sunrise">
+        <img src="assets/sunrise.jpg" alt="Clipart of a sunrise">
         <br>
         <button id="q2a1">Sunrise</button>
       </div>
 
       <div class="answer-choice">
-        <img src="assets/sunset.jpg" alt="clipart of a sunset">
+        <img src="assets/sunset.jpg" alt="Clipart of a sunset">
         <br>
         <button id="q2a2">Sunset</button>
       </div>
